Initial commit of WisLed Strapi CMS

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
+
 # Server
 HOST=0.0.0.0
 PORT=1337
 
+
 # Secrets
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
+APP_KEYS=kGHq0fvymXsKGwk8zG1gfjn8p+uyoM9t,t01CtAP7+oMEvh0fwnHOteV+hRkklQOX,STRby2WkVaLXKj5QETips1DB/nbJnm+A,fu5FGnlEiFgAx/45pvPP9RQthrr9UnW6
+API_TOKEN_SALT=j7tJGLJbsqXEb2ggouWfsAEYdSPIWnnnzQRrNOPFMpY=
+ADMIN_JWT_SECRET=EnUTQibgeRnADaggGhxo/XoNSl67Etj0f+NbmnuoWxU=
+TRANSFER_TOKEN_SALT=AQjnmWTXDSY294zFqkVi/RfUCjXXn12xXDHLdrfybSc=
+JWT_SECRET=ZukienQ61ZYbAG8f6QXyW3A6NnL/QGHwbetAKixtEic=
 
 # Database
 DATABASE_URL=tobemodified
